Add missing changes

--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -144,6 +144,7 @@
 
   .period-filter {
     & + span .select2-selection.select2-selection--single {
+      height: 25px;
       padding: 0 2em 0 0.5em;
     }
   }
