Embed whole iframe

--- a/app/views/welcomes/_form.haml
+++ b/app/views/welcomes/_form.haml
@@ -1,5 +1,5 @@
 #form-query
-  = simple_form_for :q, remote: true, method: :get, html: { class: "pt-3", id: "q", role: "search" } do |f|
+  = simple_form_for :q, url: root_url, remote: true, method: :get, html: { class: "pt-3", id: "q", role: "search" } do |f|
     = invisible_recaptcha_tags ui: :invisible, "data-badge": "bottomleft"
 
     .mb-3
