Remove showcase action

--- a/app/assets/stylesheets/_listview.scss
+++ b/app/assets/stylesheets/_listview.scss
@@ -1,8 +1,10 @@
-#logo-container,
-#article,
-.sidebar-left,
-.switch-lang,
-.g-recaptcha,
-footer {
-  display: none;
+#listview-index {
+  #logo-container,
+  #article,
+  .sidebar-left,
+  .switch-lang,
+  .g-recaptcha,
+  footer {
+    display: none;
+  }
 }
