--- a/app/views/listview/developer.html.haml
+++ b/app/views/listview/developer.html.haml
@@ -1,4 +1,9 @@
-%h1 Listview#developer
-%p Find me in app/views/listview/developer.html.haml
+.container-fluid
+  .row
+    .col-12
+      .card.my-4
+        .card-body
+          %h1 Developer Guide
+          %p OWSO's public dashboard provides you many UI style that you can use to embed into your website.
 
-%iframe{ src: "http://localhost:3000/listview", style: "width: 100%; height: 100%" }
+      %iframe{ src: "http://localhost:3000/listview", class: "vh-100", style: "width: 100%; height: 100%" }
