--- a/app/views/dashboard/_feedback_sub_categories.html.haml
+++ b/app/views/dashboard/_feedback_sub_categories.html.haml
@@ -8,7 +8,7 @@
         = render partial: "dashboard/charts/overall_rating", locals: overall_rating_locals
 
       .col-lg-6
-        - feedback_trend_locals = { title: t("welcomes.owso_feedback_trend"), province_id: province_id }
+        - feedback_trend_locals = { title: t("welcomes.owso_feedback_trend"), province_id: province_id, collection: @query.feedback_trend[province_id] }
         = render partial: "dashboard/charts/feedback_trend", locals: feedback_trend_locals
 
       .col-lg-6
