--- a/app/views/developer_guides/index.html.haml
+++ b/app/views/developer_guides/index.html.haml
@@ -2,22 +2,22 @@
   .row
     .col-12
       %section.card.p-3.mt-5
-        %h1 Developer Guide
-        %p OWSO provides you many UI style that you can use to embed into your website.
+        %h1= t('developer_guides.title') 
+        %p= t('developer_guides.intro') 
 
       %section.card.p-3.mt-3
-        %h3 Desktop view
+        %h4.mb-4= t('developer_guides.view.desktop')
         .row
           .col-xs-12.col-md-7.mb-3
-            %h5 Embeded Code
+            %h6= t('developer_guides.code')
             - code = "<iframe src=\"#{ENV['BASE_URL']}/reports\" style='width: 100%; height: 600px; border: 0;'></iframe>"
 
             .code-block.d-flex
               %pre.m-0.mr-3
                 %code.html= code
-              %button.btn.btn-sm.btn-primary.align-self-center.js-copy{ data: { copy: code, toggle: 'tooltip', placement: 'bottom' }, title: 'Copy to clipboard'}
+              %button.btn.btn-sm.btn-primary.align-self-center.js-copy{ data: { copy: code, toggle: 'tooltip', placement: 'bottom' }, title: t('developer_guides.copy')}
                 %i.fa.fa-copy
 
           .col-xs-12.col-md-5
-            %h5 Sample preview
-            = image_tag 'desktop-view.png', class: 'img-fluid'
+            %h6= t('developer_guides.preview')
+            = image_tag 'desktop-view.png', alt: 'Desktop Preview', class: 'img-fluid img-thumbnail'
