--- a/app/views/developer_guides/index.html.haml
+++ b/app/views/developer_guides/index.html.haml
@@ -10,7 +10,7 @@
         .row
           .col-xs-12.col-md-7.mb-3
             %h6= t('developer_guides.code')
-            - code = "<iframe src=\"#{ENV['BASE_URL']}/reports\" style='width: 100%; height: 600px; border: 0;'></iframe>"
+            - code = "<iframe src=\"#{ENV['BASE_URL']}/reports\" style=\"width: 100%; height: 600px; border: 0;\" frameborder=\"0\"></iframe>"
 
             .code-block.d-flex
               %pre.m-0.mr-3
