--- a/app/views/welcomes/_header.haml
+++ b/app/views/welcomes/_header.haml
@@ -2,4 +2,7 @@
   .container
     .row
       .col-12
-        %h2= t("welcomes.header") 
+        .navbar.navbar-expand-lg.navbar-light.justify-content-between.px-0
+          %h2= t("welcomes.header") 
+          %button.navbar-toggler{"aria-controls" => "navbarSupportedContent", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#form-query", "data-toggle" => "collapse", :type => "button"}
+            %span.navbar-toggler-icon
