--- a/app/assets/stylesheets/_responsive.scss
+++ b/app/assets/stylesheets/_responsive.scss
@@ -1,4 +1,7 @@
 @import "responsive_grid_system";
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/variables";
+@import "bootstrap/scss/mixins/";
 
 @include media-breakpoint-down(sm) {
   .w-sm-25 {
