--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -98,6 +98,10 @@
     background-color: #FFF;
   }
 
+  .tabs-container {
+    min-height: 300px;
+  }
+
   .fixed-lh-3 {
     line-height: 3em;
   }
