--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -122,7 +122,7 @@
     z-index: 996;
     background: white;
 
-    @include media-breakpoint-down(xs) {
+    @include media-breakpoint-down(sm) {
       top: 0;
       position: relative !important;
     }
