Fix error w3 validator check

--- a/app/views/welcomes/_form.haml
+++ b/app/views/welcomes/_form.haml
@@ -7,7 +7,7 @@
         .row
           .col-12
             .form-row
-              = f.input_field :locale, as: :hidden, name: "locale", value: I18n.locale, role: "textbox"
+              = f.input_field :locale, as: :hidden, name: "locale", value: I18n.locale
               -# logo
               .logo-inline.form-group.col-lg-3{ style: "display: none;" }
                 .d-flex.align-items-center.justify-content-start.h-100.w-100
@@ -18,26 +18,26 @@
                 %label.select.required.disabled
                   = t("welcomes.provinces")
                   %abbr{ title: t("required.string") } *
-                %span.d-block.tooltip-province{ title: "", "data-toggle": "tooltip" }
+                .d-block.tooltip-province{ title: "", "data-toggle": "tooltip" }
                   #show-provinces.form-control.text-truncate{tabindex: 5, "data-toggle": "modal", "data-target" => "#provincesModal"}
                     = t("all")
                   - province_codes = Array.wrap(params[:province_code]).select(&:present?)
-                  = f.input_field :provinces, as: :hidden, name: "province_code[]", multiple: true, class: "form-control text-truncate", value: province_codes, role: "listbox"
+                  = f.input_field :provinces, as: :hidden, name: "province_code[]", class: "form-control text-truncate", value: province_codes
 
               -# districts
               .form-group.q_district.select.col-lg-4.col-sm-12
                 %label.select.required.disabled
                   = t("welcomes.districts")
                   %abbr{ title: t("required.string") } *
-                %span.d-block.tooltip-district{ title: "", "data-toggle": "tooltip" }
+                .d-block.tooltip-district{ title: "", "data-toggle": "tooltip" }
                   #show-districts.form-control.text-truncate{tabindex: 5, "data-toggle": "modal", "data-target" => "#districtsModal"} 
                     = t("all")
                   - district_codes = Array.wrap(params[:district_code]).select(&:present?)
-                  = f.input_field :districts, as: :hidden, name: "district_code[]", multiple: true, class: "form-control text-truncate", value: district_codes, role: "listbox"
+                  = f.input_field :districts, as: :hidden, name: "district_code[]", class: "form-control text-truncate", value: district_codes
               
               -# time period
-              = f.input :start_date, as: :hidden, input_html: { class: "start_date", name: "start_date", value: @start_date, role: "textbox" }
-              = f.input :end_date, as: :hidden, input_html: { class: "end_date",name: "end_date", value: @end_date, role: "textbox" }
+              = f.input :start_date, as: :hidden, input_html: { class: "start_date", name: "start_date", value: @start_date }
+              = f.input :end_date, as: :hidden, input_html: { class: "end_date",name: "end_date", value: @end_date }
 
               .form-group.string.required.q_time_period.col-lg-3
                 %label.string.required
@@ -50,7 +50,7 @@
                     .input-group-text
                       %i.fas.fa-calendar-alt.fa-sm
               -# tab
-              = f.input :active_tab, as: :hidden, input_html: { role: "textbox" }
+              = f.input :active_tab, as: :hidden
 
               -# submit
               .form-group.col-lg-1.d-flex.align-items-center.justify-content-end
