--- a/app/views/welcomes/_header.haml
+++ b/app/views/welcomes/_header.haml
@@ -4,5 +4,5 @@
       .col-12
         .navbar.navbar-expand-lg.navbar-light.justify-content-between.px-0
           %h2= t("welcomes.header") 
-          %button.navbar-toggler{"aria-controls" => "navbarSupportedContent", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#form-query", "data-toggle" => "collapse", :type => "button"}
+          %button.navbar-toggler{"aria-controls" => "form-query", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#form-query", "data-toggle" => "collapse", :type => "button"}
             %span.navbar-toggler-icon
