--- a/app/views/welcomes/index.html.haml
+++ b/app/views/welcomes/index.html.haml
@@ -7,7 +7,7 @@
 = render "welcomes/popup_modal"
 
 #sub_categories_modals
-  <THIS IS A CONTENT OF FEEDBACK SUBCATEGORIES>
+  %span THIS IS A CONTENT OF FEEDBACK SUBCATEGORIES
 
 #feedback_trend_modals
-  <THIS IS A CONTENT OF FEEDBACK TREND>
+  %span THIS IS A CONTENT OF FEEDBACK TREND
