--- a/app/views/welcomes/_popup_modal.html.haml
+++ b/app/views/welcomes/_popup_modal.html.haml
@@ -1,4 +1,4 @@
-#popup.p-0.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "popupModal", :role => "dialog", :tabindex => "-1" }
+#popup.p-0.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "popup", :role => "dialog", :tabindex => "-1" }
   .modal-dialog.modal-dialog-centered.modal-xl{:role => "document"}
     .modal-content
       .modal-header
