--- a/app/views/welcomes/_logo.haml
+++ b/app/views/welcomes/_logo.haml
@@ -1,2 +1,2 @@
-= link_to root_path, tabindex: tabindex, id: id, name: "usaid_logo", role: "link", class: "logo-link d-inline-block" do
-  = image_tag "logo-usaid.png", alt: "USAID logo", class: "img-fluid rounded-sm branding-logo", role: "img"
+= link_to root_path, tabindex: tabindex, id: id, class: "logo-link d-inline-block" do
+  = image_tag "logo-usaid.png", alt: "USAID logo", class: "img-fluid rounded-sm branding-logo"
