--- a/app/components/location_modal_component.html.haml
+++ b/app/components/location_modal_component.html.haml
@@ -7,13 +7,13 @@
             = t("welcomes.#{@component}s")
           %small.help-text
             = "(#{t("welcomes.multi_#{@component}s")})"
-        %button.close{"aria-label" => "Close", "data-dismiss" => "modal", :type => "button", role: "button", value: "dismiss"}
+        %button.close{"aria-label" => "Close", "data-dismiss" => "modal", :type => "button", value: "dismiss"}
           %span{"aria-hidden" => "true"} ×
       .modal-body
         .position-relative
           = select_input
       .modal-footer
-        %button.btn.btn-secondary{"data-dismiss" => "modal", :type => "button", role: "button", value: "canceled"}
+        %button.btn.btn-secondary{"data-dismiss" => "modal", :type => "button", value: "canceled"}
           = t("shared.cancel")
-        %button.btn.btn-primary{class: "btn-#{@component}-save", :type => "button", role: "button", value: "saved"}
+        %button.btn.btn-primary{class: "btn-#{@component}-save", :type => "button", value: "saved"}
           = t("shared.save")
