--- a/app/views/welcomes/_popup_modal.html.haml
+++ b/app/views/welcomes/_popup_modal.html.haml
@@ -2,11 +2,11 @@
   .modal-dialog.modal-dialog-centered.modal-xl{:role => "document"}
     .modal-content
       .modal-header
-        %h5.modal-title
+        %h5.modal-title!= "&nbsp;"
         %button.close{"aria-label" => "Close", "data-dismiss" => "modal", :type => "button"}
           %span{"aria-hidden" => "true"} ×
       .modal-body{ "data-state": "prune" }
         = image_tag "pop-up-message.png", class: 'img-fluid', alt: "Welcome to OW4C public dashboard", role: "img"
       .modal-footer
-        %button.btn.btn-secondary{"data-dismiss" => "modal", :type => "button", role: "button", value: "canceled"}
+        %button.btn.btn-secondary{"data-dismiss" => "modal", :type => "button", value: "canceled"}
           = t("shared.cancel")
