Add link to privacy page & enhance UI

--- a/app/views/privacy_policy/index.html.haml
+++ b/app/views/privacy_policy/index.html.haml
@@ -8,7 +8,7 @@
       .main-content.p-3
         %p 
           At OW4C, accessible from 
-          = link_to "http://www.dashboard.ow4c.info/", "http://www.dashboard.ow4c.info/", target: "_blank"
+          = link_to ENV['BASE_URL'], ENV['BASE_URL'], target: "_blank"
           , one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by OW4C and how we use it.
         %p If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.
         
