Improve keyboard focus visibility

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -120,7 +120,7 @@
   }
   .filter-label,
   .date-filter__label,
-  .datepicker_date {
+  .daterange-container {
     font-size: 0.875em;
   }
 
@@ -131,7 +131,7 @@
     border-radius: 7px;
   }
 
-  .datepicker_date {
+  .daterange-container {
     color: rgba(25, 32, 56, 0.8);
   }
 
