--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -4,6 +4,15 @@
 
 #welcomes-index,
 #reports-index {
+  // Improve keyboard visibility when
+  // user navigate using tab
+  a:focus,
+  .form-control:focus,
+  .btn:focus {
+    border-color: #0d33a7;
+    box-shadow: 0 0 0 0.2rem rgba(78, 115, 223, 75%);
+  }
+
   .nav-tabs .nav-link:focus,
   .ssb-icon:focus,
   .logo-link:focus {
