--- a/app/views/welcomes/_form.haml
+++ b/app/views/welcomes/_form.haml
@@ -44,8 +44,8 @@
                   = t("welcomes.time_period")
                   %abbr{ title: t("required.string") } *
 
-                .input-group.datepicker_date
-                  = f.input_field :time_period, class: "form-control string required input-daterange", tabindex: 6, value: "#{@start_date} - #{@end_date}", name: "q[time_period]", id: "q_time_period"
+                .input-group.daterange-container
+                  = f.input_field :time_period, class: "form-control string required datepicker_date", tabindex: 6, value: "#{@start_date} - #{@end_date}", name: "q[time_period]", id: "q_time_period"
                   .input-group-append
                     .input-group-text
                       %i.fas.fa-calendar-alt.fa-sm
