--- a/app/components/location_modal_component.html.haml
+++ b/app/components/location_modal_component.html.haml
@@ -7,7 +7,7 @@
             = t("welcomes.#{@component}s")
           %small.help-text
             = "(#{t("welcomes.multi_#{@component}s")})"
-        %button.close{"aria-label" => "Close", "data-dismiss" => "modal", :type => "button", value: "dismiss"}
+        %button.close{"aria-label" => "Close", "data-dismiss" => "modal", :type => "button", value: "dismiss", tabindex: "-1"}
           %span{"aria-hidden" => "true"} ×
       .modal-body
         .position-relative
